[tool.poetry]
name = "pika-demo"
version = "0.1.0"
description = ""
authors = ["Mehran Shahidi <m.mehranshahidi@gmail.com>"]
readme = "README.md"
# packages = [{ include = "rest_api" }]

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.18.3"  # Pytest plugin for asyncio tests

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


